Fix pre scrollbar
Combining `overflow: auto` with  small line height forces scrollbar.

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -40,7 +40,7 @@ pre {
   margin-bottom: 0;
   margin-right: var(--margin-main-right);
   margin-top: var(--margin);
-  overflow: auto;
+  overflow-wrap: break-word;
   white-space: pre-wrap;
 }
 
